<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">肿瘤科值班手册</string>

    <!-- 底部导航 -->
    <string name="nav_home">首页</string>
    <string name="nav_bookshelf">书架</string>
    <string name="nav_manual">手册</string>
    <string name="nav_content">我的</string>
    <string name="nav_settings">设置</string>

    <!-- 菜单 -->
    <string name="action_edit">编辑</string>
    <string name="action_delete">删除</string>
</resources>
