<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/bookshelfFragment"
        android:icon="@drawable/ic_nav_book"
        android:title="@string/nav_bookshelf" />
    <item
        android:id="@+id/manualFragment"
        android:icon="@drawable/ic_nav_manual"
        android:title="@string/nav_manual" />
    <item
        android:id="@+id/myContentFragment"
        android:icon="@drawable/ic_nav_note"
        android:title="@string/nav_content" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
